terminado detalles de diseño agregando un .css

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -163,7 +163,7 @@
         <tr><td>{{estacionamiento.Tarifa}}</td></tr>
       {% endif %}
       {% if estacionamiento.monto_tarifa %}
-        <tr><td><b><i class="fa fa-money"></i></i> A pagar por hora:</b></td></tr>
+        <tr><td><b><i class="fa fa-dollar"></i></i> A pagar por hora:</b></td></tr>
         <tr><td>{{estacionamiento.monto_tarifa}} Bsf.</td></tr>
       {% endif %}
       
@@ -192,16 +192,18 @@
               {% csrf_token %}
               {% for field in form %}
               {%if field.name = 'tarifa'%}
-              <h>Seleccione Esquema Tarifario</h>
+              <hr>
+              <h4>Esquema Tarifario</h4>
 				
-				<SELECT NAME="tarifa" SELECTED>Tarifa
+				<SELECT size="1" NAME="tarifa" style="width: 222px; height:35px" >Tarifa
+				    <OPTION VALUE="none" SELECTED>------
 				    <OPTION VALUE="minutos">Minutos
 				    <OPTION VALUE="horas">Horas
-				
-				</SELECT>
-				
+				</SELECT><br>
+			
               
               {%else%}
+              <br>
               	  <div class="control-group">
                   <div class="controls">
                     <input type="text" class="form-control" name="{{field.name}}" placeholder="{{field.label}}" for="id_{{field.name}}"><p>
@@ -216,7 +218,7 @@
                   <label>
                   </label>
                   <div class="controls">
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary" style="width: 222px; height:35px">
                       Parametrizar Estacionamiento
                     </button>
                   </div>
