--- a/templates/estacionamientoReserva.html
+++ b/templates/estacionamientoReserva.html
@@ -160,7 +160,7 @@
         <tr><td>{{estacionamiento.Tarifa}}</td></tr>
       {% endif %}
       {% if estacionamiento.monto_tarifa %}
-        <tr><td><b><i class="fa fa-money"></i></i> A pagar por hora:</b></td></tr>
+        <tr><td><b><i class="fa fa-dollar"></i></i> A pagar por hora:</b></td></tr>
         <tr><td>{{estacionamiento.monto_tarifa}} Bsf.</td></tr>
       {% endif %}
       
