Revert "Historia tarifa"

--- a/templates/estacionamientoReserva.html
+++ b/templates/estacionamientoReserva.html
@@ -155,14 +155,11 @@
         <tr><td><b><i class="fa fa-clock-o"></i> Horario cierre:</b></td></tr>
         <tr><td>{{estacionamiento.Cierre}}</td></tr>
       {% endif %}
- 	  {% if estacionamiento.Tarifa %}
-        <tr><td><b><i class="fa fa-money"></i></i> Esquema Tarifario:</b></td></tr>
-        <tr><td>{{estacionamiento.Tarifa}}</td></tr>
+    {% if estacionamiento.Tarifa %}
+        <tr><td><b><i class="fa fa-money"></i></i> Tarifa:</b></td></tr>
+        <tr><td>{{estacionamiento.Tarifa}} Bsf.</td></tr>
       {% endif %}
-      {% if estacionamiento.monto_tarifa %}
-        <tr><td><b><i class="fa fa-dollar"></i></i> A pagar por hora:</b></td></tr>
-        <tr><td>{{estacionamiento.monto_tarifa}} Bsf.</td></tr>
-      {% endif %}
+      
       
         </tbody>
       </table>
