--- a/templates/templateMensaje.html
+++ b/templates/templateMensaje.html
@@ -6,7 +6,6 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/reserva.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 
@@ -73,62 +72,42 @@
 <div class="col-sm-10">
         
       <!-- column 2 --> 
-       <h3><i class="fa fa-bus"></i> Estacionamientos / Reserva</h3>  
+       <h3><i class="fa fa-bus"></i> Estacionamientos</h3>  
             
        <hr>
       
      <div class="row">
-      </div><div class="col-md-6">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <div class="panel-title">
-                <i class="glyphicon glyphicon-info-sign pull-right">
-                </i>
-                <h3>
-                   Resumen reserva
-                </h3></b>
-              </div>
-            </div>
-            <div class="panel-body">
-	            <table class="table table-striped">
-			        <thead>
-			             <h4 class="col-md-12" style="color:{{color}}" align="left"> 
-						{{mensaje}}
-	            	  </h4>
-			        </thead>
-			        <tbody>
-			        <tr><td><b><i class="fa fa-car"></i> Nombre estacionamiento</b></td></tr>
-			        <tr><td>{{nomb}}</td></tr>
-			      		     
-			        <tr><td><b><i class="fa fa-clock-o"></i> Horario inicio de reserva</b></td></tr>
-			        <tr><td>{{ini}}</td></tr>
-			    
-			        <tr><td><b><i class="fa fa-clock-o"></i> Horario fin de reserva</b></td></tr>
-				    <tr><td>{{fin}}</td></tr>
-	              
-	              	<tr><td><b><i class="fa fa-dollar"></i> Monto a pagar</b></td></tr>
-				    <tr><td>{{monto}} Bs</td></tr>
-				 </table> <!--cerrando tabla-->     
-				     
-   			 </div> <!--cerrando panel boddy--> 
-   			 
-   		 </div>  <!--cerrando panel completo--> 
-	   		<a href=".">
-   			<button type="button" class="btn btn-default btn-lg">
-	  			
-	  			<span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Volver
-			</button>
-			</a>
-			
-			<button type="button" class="btn btn-default btn-lg boton_pago">
-		  			Realizar pago <span class="glyphicon glyphicon-circle-arrow-right" aria-hidden="true"></span> 
-			</button>
-		 
-   	 </div> <!--cerrando col-med-6 --> 
-   	 
-	</div> <!--cerrando row--> 
-	 
-</div> <!--cerrando col--> 
+            <!-- center left--> 
+          <!--/col-->
+         
+            <!--center-right-->
+          <!--/col-span-6-->
+     
+       <div class="col-md-8" style="color:{{color}}"> 
+			{{mensaje}}
+      <hr>              
+    </div><div class="col-md-4">
+
+    
+          
+          <!--/panel-->
+          
+          <!--/panel-->
+          
+        </div></div><!--/row-->
+    </div>
+        
+      </div>
+      <!--/row-->
+      <!-- /upper section -->
+      
+      <!-- lower section -->
+      <div class="row">
+      </div>
+      <!--/row-->
+      
+    </div>
+
     <script type="text/javascript" src="/static/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
