Implementada la historia de pagos.

--- a/templates/templateMensaje.html
+++ b/templates/templateMensaje.html
@@ -119,11 +119,12 @@
 	  			<span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span> Volver
 			</button>
 			</a>
-			
+			<a href="./pagos">
 			<button type="button" class="btn btn-default btn-lg boton_pago">
 		  			Realizar pago <span class="glyphicon glyphicon-circle-arrow-right" aria-hidden="true"></span> 
 			</button>
-		 
+			</a>
+		  
    	 </div> <!--cerrando col-med-6 --> 
    	 
 	</div> <!--cerrando row--> 
