--- a/static/css/reserva.css
+++ b/static/css/reserva.css
@@ -4,3 +4,20 @@
    margin-left:160px;   
    text-align:left;
 }
+
+.cancelar {
+  
+   position:relative;
+   margin-left:95px;
+   margin-top:10px;   
+   text-align:left;
+}
+
+.cvv {
+  
+   position:relative;
+   margin-left:60px;
+   margin-top:-50px;   
+   text-align:left;
+}
+
