--- a/static/css/ProgressBar.css
+++ b/static/css/ProgressBar.css
@@ -1,16 +1,15 @@
 .progressBarContainerClass
 {
  margin-left:0px;
- height: 25px;
- width: 600px;
- border: 1px solid black;
- border-radius: 3px 3px 3px 3px;
- -moz-border-radius: 3px 3px 3px 3px;
- -webkit-box-shadow: 0px 0px 5px #999;
- -moz-box-shadow: 0px 0px 5px #999;
- box-shadow:0px 0px 3px 1px rgba(0,0,0,0.3);
+ height: 30px;
+ width: 598px;
+ background-color:#5CB85C;
+ margin-top:15px;
  background: -webkit-gradient(linear, center top, center bottom, color-stop(0.4, #D8D6D5), color-stop(1.2, #999999));
  background: -moz-linear-gradient(top, #D8D6D5 20%, #999999 80%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D8D6D5', endColorstr='#999999');
 }
 
+#progresBarFill{
+ background-color:#5CB85C;
+}
