--- a/static/css/pago.css
+++ b/static/css/pago.css
@@ -5,6 +5,23 @@
    
 }
 
+.panel_pago {
+  
+   position:relative;
+   margin-left:50px;   
+   margin-top:-50px;   
+   
+}  
+
+
+.equis {
+  
+   position:relative;
+   margin-left:550px;   
+   margin-top:-150px;   
+   
+}  
+
 .cancelar {
   
    position:relative;
@@ -30,6 +47,17 @@
    margin-bottom:2px;
    margin-top:-34px;  
 }
+
+.error_reserva{
+   padding:0px 5px;
+     
+}
+
+.errormsg{
+   margin-bottom:-5px;
+   margin-top:-20px;    
+}
+
 
 .error2{
    padding:0px;
@@ -57,6 +85,20 @@
    margin-top:5px;  
 }
 
+.listo{
+   
+   position: relative;	
+   width:200px;
+   margin-bottom:15px;
+   margin-top:15px;
+   margin-left:200px;
+   font-size:14px;  
+}
+.tituloPago{
+   
+   margin-bottom:-5px;
+   margin-top:-5px;  
+}
 
 #tabla tr:nth-child(even) {
 
