Pasando argumentos al html a ver si se pasa el objeto o no

--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -151,6 +151,13 @@
                 <td class="tabladerecha">{{puesto}}</td>
                 
               </tr>
+              
+              <tr>
+                
+                <td class="tablaizq">Mensaje</td>
+                <td class="tabladerecha">{{mensaje}}</td>
+                
+              </tr>
  
             </tbody>
           </table>
@@ -185,6 +192,10 @@
 				</thead>
 		
 			</table>
+			
+				
+			
+			
 
     </div>
    			 </div> <!--cerrando panel boddy--> 
