--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -195,9 +195,9 @@
    	
    	 </div>
    	 
-		  <button type = "reset" class="btn btn-danger cancelar" id="cancel" style="width: 200px; height:35px" onclick="mostrarAlerta()"><i class="fa fa-remove"></i> Cancelar reserva</button>        
+		  <button type = "reset" class="btn btn-danger " id="cancel" style="width: 200px" onclick="mostrarAlerta()"><i class="fa fa-remove"></i> Cancelar reserva</button>        
     
-           <button class="btn btn-primary" id="prepagar" style="width: 200px; height:35px;" onclick="mostrarPagos()"> Pagar reserva <i class="fa fa-arrow-circle-right"></i></button>
+           <button class="btn btn-primary" id="prepagar" style="width: 200px;" onclick="mostrarPagos()"> Pagar reserva <i class="fa fa-arrow-circle-right"></i></button>
                     
 </div>
 
