--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -258,7 +258,7 @@
 
 </div> <!--cerrando col--> 
 <div class="col-md-8 panel_p">
- 	<div class="panel panel-success" id="panel_pago" style="display:none">       
+ 	<a name="ppagos"><div class="panel panel-success" id="panel_pago" style="display:none"></a>       
  		<div class="panel-heading">
               <div class="panel-title">
                    <b><h3 class="tituloPago">Procesando pago</b></h3>				
@@ -283,7 +283,7 @@
         	  </div>
         </div>	
     		<h4 class="alertmsj"><b>¿Está seguro que desea cancelar su reserva?</h4></b>
-	    	<a href="./"><button class="btn btn-default yes"  align="center">SI</button></a>
+	    	<a href="./eliminandoreserva"><button class="btn btn-default yes"  align="center">SI</button></a>
 			<button class="btn btn-default no"  align="center" onclick="ocultarAlerta()" >NO</button>
 		
 	</div>	       
