Cambios controler.py

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -199,6 +199,8 @@
 				    <OPTION VALUE="none" SELECTED>------
 				    <OPTION VALUE="minutos">Minutos
 				    <OPTION VALUE="horas">Horas
+				    <OPTION VALUE="horaFraccion">Hora y Fraccion
+				    
 				</SELECT><br>
 			
               
