Arreglar problema con la hora de inicio de la reserva igual a 0

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -142,7 +142,7 @@
         <tr><td><b><i class="fa fa-car"></i> Puestos:</b></td></tr>
         <tr><td>{{estacionamiento.NroPuesto}}</td></tr>
       {% endif %}
-      {% if estacionamiento.Reservas_Inicio %}
+      {% if True %}
         <tr><td><b><i class="fa fa-clock-o"></i> Horario inicio de reserva:</b></td></tr>
         <tr><td>{{estacionamiento.Reservas_Inicio}}</td></tr>
       {% endif %}
@@ -150,7 +150,7 @@
         <tr><td><b><i class="fa fa-clock-o"></i> Horario fin de reserva:</b></td></tr>
         <tr><td>{{estacionamiento.Reservas_Cierre}}</td></tr>
       {% endif %}
-      {% if estacionamiento.Apertura %}
+      {% if True %}
         <tr><td><b><i class="fa fa-clock-o"></i> Horario apertura:</b></td></tr>
         <tr><td>{{estacionamiento.Apertura}}</td></tr>
       {% endif %}
