--- a/templates/estacionamientoReserva.html
+++ b/templates/estacionamientoReserva.html
@@ -139,7 +139,7 @@
         <tr><td><b><i class="fa fa-car"></i> Puestos:</b></td></tr>
         <tr><td>{{estacionamiento.NroPuesto}}</td></tr>
       {% endif %}
-      {% if estacionamiento.Reservas_Inicio %}
+      {% if True %}
         <tr><td><b><i class="fa fa-clock-o"></i> Horario inicio de reserva:</b></td></tr>
         <tr><td>{{estacionamiento.Reservas_Inicio}}</td></tr>
       {% endif %}
@@ -147,7 +147,7 @@
         <tr><td><b><i class="fa fa-clock-o"></i> Horario fin de reserva:</b></td></tr>
         <tr><td>{{estacionamiento.Reservas_Cierre}}</td></tr>
       {% endif %}
-      {% if estacionamiento.Apertura %}
+      {% if True %}
         <tr><td><b><i class="fa fa-clock-o"></i> Horario apertura:</b></td></tr>
         <tr><td>{{estacionamiento.Apertura}}</td></tr>
       {% endif %}
